# Robot_Differentiable_Rigid_Simulation

./: CMakeLists.txt  README.md  commit.sh  git reset --soft HEAD=commit b221767012f771595787a122f3e8746df8187894
Articulated/: ArticulatedBody.cpp  ArticulatedBody.h  ArticulatedLoader.cpp  ArticulatedLoader.h  ArticulatedUtils.cpp  ArticulatedUtils.h  ArticulatedVisualizer.cpp  ArticulatedVisualizer.h  Joint.cpp  Joint.h  NEArticulatedGradientInfo.cpp  NEArticulatedGradientInfo.h  PBDArticulatedGradientInfo.cpp
ConvexHull/: Barrier.h  ConvexHullDistanceConvexEnergy.cpp  ConvexHullDistanceEnergy.cpp  ConvexHullDistanceEnergy.h  ConvexHullDistanceFrictionEnergy.cpp  ConvexHullDistanceFrictionEnergy.h  ConvexHullMeshDistanceEnergy.cpp  ConvexHullMeshDistanceEnergy.h  ConvexHullMeshDistanceFrictionEnergy.cpp  ConvexHullMeshDistanceFrictionEnergy.h  GJKPolytope.cpp  GJKPolytope.h
Environment/: BBoxExact.cpp  BBoxExact.h  BVHNode.cpp  BVHNode.h  CompositeShapeExact.cpp  CompositeShapeExact.h  ContactGenerator.cpp  ContactGenerator.h  ConvexDecomposition.cpp  ConvexDecomposition.h  ConvexHullExact.cpp  ConvexHullExact.h  DistanceFunction.h  Environment.h  EnvironmentUtils.cpp  EnvironmentUtils.h  EnvironmentVisualizer.cpp  GJK.cpp  GJK.h  GJKK.cpp  GJKK.h  MeshExact.cpp  MeshExact.h  PointCloudExact.h  ShapeExact.h  SphericalBBoxExact.cpp  SphericalBBoxExact.h  TriangleExact.cpp  TriangleExact.h
Main/DebugArticulated/: mainArticulatedLoadURDF.cpp  mainContactManifold.cpp  mainConvex2D.cpp  mainEnvironment.cpp  mainGJK.cpp  mainSAT.cpp
Main/DebugSimulator/: mainConvHullPBDMultiChain.cpp  mainConvHullPBDTwoChain.cpp  mainConvexHullSpiderPD.cpp  mainDebugCC.cpp  mainDebugConvHullPBD.cpp  mainDebugPBD.cpp  mainDebugPBDMatrixSolve.cpp  mainPBDBox.cpp  mainPBDBoxCrush.cpp  mainPBDBoxEdge.cpp  mainPBDBoxStack.cpp  mainPBDChain.cpp  mainPBDChainKinematic.cpp  mainPBDTwoChain.cpp
Python/: imgui.ini  pyPBAD.cpp
Python/log/: events.out.tfevents.1733841007.yxh-System-Product-Name.1576720.0  events.out.tfevents.1733842304.yxh-System-Product-Name.1683338.0  events.out.tfevents.1733842339.yxh-System-Product-Name.1686339.0  events.out.tfevents.1733842379.yxh-System-Product-Name.1689707.0  events.out.tfevents.1733842406.yxh-System-Product-Name.1691935.0  events.out.tfevents.1733842500.yxh-System-Product-Name.1699710.0  events.out.tfevents.1733843058.yxh-System-Product-Name.1745675.0  events.out.tfevents.1733843748.yxh-System-Product-Name.1802588.0  events.out.tfevents.1733845120.yxh-System-Product-Name.1915953.0  events.out.tfevents.1733845224.yxh-System-Product-Name.1924532.0  events.out.tfevents.1733845357.yxh-System-Product-Name.1935288.0  events.out.tfevents.1733845455.yxh-System-Product-Name.1943543.0  events.out.tfevents.1733845481.yxh-System-Product-Name.1945686.0  events.out.tfevents.1733845494.yxh-System-Product-Name.1946850.0  events.out.tfevents.1733845642.yxh-System-Product-Name.1959265.0  events.out.tfevents.1733845725.yxh-System-Product-Name.1966082.0  (+3 more)
SIPCollision/: Barrier.h  CCSeparatingPlanes.h  CollisionBarrierEnergy.cpp  CollisionBarrierEnergy.h  CollisionHandler.cpp  CollisionHandler.h  ConvexHullDistanceConvexEnergy.cpp  ConvexHullDistanceConvexEnergy.h  ConvexHullDistanceEnergy.cpp  ConvexHullDistanceEnergy.h  DistanceEnergy.cpp  DistanceEnergy.h  DistanceFunction.h  EntityId.cpp  EntityId.h  GJK.cpp  GJK.h  GJKPolytope.cpp  GJKPolytope.h  GravityEnergy.cpp  GravityEnergy.h  JointLimitEnergy.cpp  JointLimitEnergy.h  PenetrationDetector.cpp  PenetrationDetector.h  SmoothnessEnergy.h  TargetEnergy.cpp  TargetEnergy.h  ThetaTrajectory.cpp  ThetaTrajectory.h  TrajectorySIPEnergy.h
Simulator/: ConvHullPBDSimulator.cpp  ConvHullPBDSimulator.h  MeshBasedPBDSimulator.cpp  MeshBasedPBDSimulator.h  PBDMatrixSolver.cpp  PBDMatrixSolver.h  PBDSimulator.cpp  PBDSimulator.h  Simulator.cpp  Simulator.h  SimulatorVisualizer.cpp  SimulatorVisualizer.h  XPBDSimulator.cpp  XPBDSimulator.h
Utils/: Epsilon.h  SparseUtils.h  SparseVisualizer.h
cmake/: FindTinyVisualizer.cmake  LoadLibs.cmake
data/: ANYmalRipple.sh  cube.ply  kuka.urdf  sphere.npy  terrain.sh  test.py  tree.obj.convex
