CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(PhysicsMotion)

#COMPILE SETTINGS
SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
SET(CMAKE_BUILD_TYPE Release CACHE STRING "Compiler optimization level")
SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF()
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  MESSAGE(STATUS "Build type: Debug")
  IF(MSVC)
    SET(CMAKE_CXX_FLAGS "/openmp /bigobj /Wall /std:c++17 ${CMAKE_CXX_FLAGS}")
  ELSE(MSVC)
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_DEBUG=1)
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_USE_CXX11_ABI=1)
    SET(CMAKE_CXX_FLAGS "-fopenmp -O0 -Wall -fPIC -std=c++17 -Wno-unused-function -Wno-unused-local-typedefs ${CMAKE_CXX_FLAGS}")
  ENDIF(MSVC)
ELSE()
  MESSAGE(STATUS "Build type: Release")
  IF(MSVC)
    SET(CMAKE_CXX_FLAGS "/openmp /bigobj /Wall /std:c++17 ${CMAKE_CXX_FLAGS}")
  ELSE(MSVC)
    ADD_COMPILE_DEFINITIONS(_GLIBCXX_USE_CXX11_ABI=1)
    SET(CMAKE_CXX_FLAGS "-fopenmp -O3 -Wall -fPIC -std=c++17 -Wno-unused-function -Wno-unused-local-typedefs ${CMAKE_CXX_FLAGS}")
  ENDIF(MSVC)
ENDIF()
SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE})

#C++11 ABI
OPTION(USE_CXX11_ABI "Whether to use C++11's ABI" ON)
IF(NOT ${USE_CXX11_ABI})
  MESSAGE(STATUS "Disabling C++11's ABI")
  SET(CMAKE_CXX_FLAGS "-D_GLIBCXX_USE_CXX11_ABI=0 ${CMAKE_CXX_FLAGS}")
ELSE()
  MESSAGE(STATUS "Enabling C++11's ABI")
ENDIF()

#LIBRARY SETTINGS
SET(FLOAT_PRECISION double CACHE STRING "Multi-precision setting")
IF(QUADMATH_FOUND)
  SET_PROPERTY(CACHE FLOAT_PRECISION PROPERTY STRINGS double float128 mpfr_float)
ELSE(QUADMATH_FOUND)
  SET_PROPERTY(CACHE FLOAT_PRECISION PROPERTY STRINGS double mpfr_float)
ENDIF(QUADMATH_FOUND)
ADD_DEFINITIONS(-DFLOAT=${FLOAT_PRECISION})
INCLUDE("${PROJECT_SOURCE_DIR}/cmake/LoadLibs.cmake")
IF(${FLOAT_PRECISION} STREQUAL "double")
ELSE()
  ADD_DEFINITIONS(-DFORCE_ADD_DOUBLE_PRECISION)
ENDIF()

#THIRD PARTY HEADERS
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
MACRO(SEARCH_SOURCE NAME DIRPRJ)
  FILE(GLOB_RECURSE header${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.h ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.hpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.hh)
  FILE(GLOB_RECURSE source${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cpp ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cc ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.c)
ENDMACRO(SEARCH_SOURCE)
SEARCH_SOURCE(Articulated Articulated)
SEARCH_SOURCE(Environment Environment)
SEARCH_SOURCE(Simulator Simulator)
SEARCH_SOURCE(SIPCollision SIPCollision)

SEARCH_SOURCE(Utils Utils)
#BUILD LIBRARY
ADD_LIBRARY(PhysicsMotion STATIC
    ${sourceArticulated} ${headerArticulated}
    ${sourceEnvironment} ${headerEnvironment}
    ${sourceSimulator} ${headerSimulator}
    ${sourceSIPCollision} ${headerSIPCollision}
    
    ${sourceUtils} ${headerUtils})
TARGET_LINK_LIBRARIES(PhysicsMotion ${ALL_LIBRARIES})

#EXE

MACRO(ADD_EXE NAME)
  ADD_EXECUTABLE(${NAME} Main/${FOLDER}/${NAME}.cpp)
  IF(MSVC)
    TARGET_LINK_LIBRARIES(${NAME} PhysicsMotion ${ALL_STATIC_LIBRARIES})
  ELSE(MSVC)
    TARGET_LINK_LIBRARIES(${NAME} PhysicsMotion gomp ${ALL_STATIC_LIBRARIES})
  ENDIF(MSVC)
ENDMACRO(ADD_EXE)

#DEBUG
SET(FOLDER DebugArticulated)
SET(BUILD_DEBUG_ARTICULATED OFF)
IF(BUILD_DEBUG_ARTICULATED)
  ADD_EXE(mainArticulatedLoadBasic)
  ADD_EXE(mainArticulatedLoadURDF)
  ADD_EXE(mainPBCentroidDynamics)
  ADD_EXE(mainArticulatedUtils)
  ADD_EXE(mainContactManifold)
  ADD_EXE(mainRotationUtils)
  ADD_EXE(mainSparseUtils)
  ADD_EXE(mainEnvironment)
  ADD_EXE(mainPolynomial)
  ADD_EXE(mainFacetEdge)
  ADD_EXE(mainConvex2D)
  ADD_EXE(mainUtils)
  ADD_EXE(mainGJK)
  ADD_EXE(mainSAT)
  ADD_EXE(mainIO)
ENDIF()

SET(FOLDER DebugSimulator)
SET(BUILD_DEBUG_SIMULATOR ON)
IF(BUILD_DEBUG_SIMULATOR)
  ADD_EXE(mainDebugPBDMatrixSolve)
  ADD_EXE(mainDebugPBD)
  ADD_EXE(mainPBDChain)
  ADD_EXE(mainPBDTwoChain)
  ADD_EXE(mainPBDChainKinematic)
  ADD_EXE(mainPBDBox)
  ADD_EXE(mainPBDBoxEdge)
  ADD_EXE(mainPBDBoxStack)
  ADD_EXE(mainPBDBoxCrush)
ENDIF()
